<resources>
    <string name="app_name">MyGlucose</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_password">This email address or password is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_invalid_hostname_or_port">The hostname or port entered is either faulty or cannot connect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings&#8230;</string>
    <string name="log_exercise">Log Exercise</string>
    <string name="log_meals">Log Meals</string>
    <string name="log_glucose">Log Glucose</string>
    <string name="title_activity_settings">Settings</string>
    <string name="register">Register</string>
    <string name="register_account">Register New Account</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="select_a_doctor">Select a doctor:</string>
    <string name="title_activity_register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="view_profile_activity">View Profile</string>
    <string name="title_activity_log_meals">Log Meal</string>
    <string name="submit">Save</string>
    <string name="carbs">Carbs</string>
    <string name="meal_item_name">Food</string>
    <string name="view_latest_entry">View Latest</string>
    <string name="view_entry_history">View History</string>
    <string name="Plus">+</string>

    <!-- Strings related to Settings -->


    <string name="developer_settings">Developer Settings</string>
    <string name="patient_settings">Patient Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_title_hostname">Server Hostname</string>
    <string name="pref_default_hostname">legendscomic.com</string>

    <string name="pref_title_port">Server Port</string>
    <string name="pref_default_port">22222</string>

    <string name="pref_title_glucose_units">Units of Measurement</string>
    <string-array name="pref_glucose_units_list_titles">
        <item>mmol/mL</item>
        <item>mg/dL</item>
    </string-array>

    <string-array name="pref_glucose_units_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example General settings -->

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_track_steps">Track Steps</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="minus">-</string>
    <string name="servings">Servings</string>
    <string name="Meal">Meal: </string>


    <!--Unused currently, for the EditProfileActivity. 9/12/2018 8:32PM-->
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="whichMeal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Other</item>
    </string-array>
    <string-array name="beforeAfter">
        <item>Before</item>
        <item>After</item>
    </string-array>

    <string name="title_activity_view_latest_meal_entry">ViewLatestMealEntry</string>
    <string name="title_activity_log_glucose">Log Glucose</string>
    <string name="when_was_your_meal">When was your meal?</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="did_you_record_your_glucose_before_or_after">Did you record your glucose before or after?</string>
    <string name="none_entered_yet">None entered yet</string>
    <string name="before_or_after_meal">Before or after meal:</string>
    <string name="close">Close</string>
    <string name="error_already_registered">This email has already been registered to the application.</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_minutes">Exercise Minutes</string>
    <string name="createdAt">Date</string>
    <string name="minutes">Minutes</string>
    <string name="exercise_examples">ex. jogging, weightlifting etc.</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="exit">Exit</string>
    <string name="view_profile">View Profile</string>
    <string name="add_fields">Please add the following fields to your profile</string>
    <string name="address2">Address 2</string>
    <string name="zip1">Zip 1</string>
    <string name="zip2">Zip 2</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_exercise_entry">Exercise Entry</string>
    <string name="dash">-</string>
    <string name="service_label">MyGlucose Step Tracker</string>
    <string name="exercise_steps">Steps (if applicable)</string>
    <string name="empty_listview">You haven\'t logged any entries yet.</string>
    <string name="pref_title_show_notification">Show Notification</string>
    <string name="which_meal">Meal</string>
    <string name="before_after">Before/After</string>
    <string name="date">Date</string>
    <string name="share_this">Share</string>
</resources>
