<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:key="example_switch"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:title="@string/pref_title_social_recommendations" />-->

    <PreferenceCategory android:title="@string/patient_settings">

        <!-- NOTE: The ListPreference is initialized with a <string-array> in the strings.xml file.
         To Create a new ListPreference, do it there. -->

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_glucose_units_list_titles"
            android:entryValues="@array/pref_glucose_units_list_values"
            android:key="glucose_units"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_glucose_units" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="track_steps"
            android:title="@string/pref_title_track_steps" />

        <SwitchPreference
            android:dependency="track_steps"
            android:defaultValue="true"
            android:key="show_notification"
            android:title="@string/pref_title_show_notification" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/developer_settings">

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_hostname"
            android:inputType="textCapWords"
            android:key="hostname"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_hostname" />


        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_port"
            android:inputType="textCapWords"
            android:key="port"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_port" />

    </PreferenceCategory>

</PreferenceScreen>
