<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ViewProfileActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:stretchColumns="1">


        <TextView
            android:id="@+id/tv_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/tv_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_fname" />

        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameView" />


        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_lname" />

        <TextView
            android:id="@+id/phoneNumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameView" />


        <TextView
            android:id="@+id/tv_address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <TextView
            android:id="@+id/addressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumView" />

        <TextView
            android:id="@+id/tv_address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/addressView" />

        <TextView
            android:id="@+id/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address2"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressView" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_address2" />

        <TextView
            android:id="@+id/cityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address2" />


        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_city" />

        <TextView
            android:id="@+id/stateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityView" />


        <TextView
            android:id="@+id/tv_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_state" />

        <TextView
            android:id="@+id/zip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip1"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@+id/dash"
            app:layout_constraintTop_toBottomOf="@+id/stateView" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            app:layout_constraintRight_toLeftOf="@+id/zip2"
            app:layout_constraintTop_toBottomOf="@+id/stateView" />

        <TextView
            android:id="@+id/zip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip2"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateView" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_zip" />


        <TextView
            android:id="@+id/weightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zip1" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

        <TextView
            android:id="@+id/heightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightView" />

        <Button
            android:id="@+id/close_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightView" />

        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/holo_orange_light"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/edit_profile"
            app:layout_constraintRight_toLeftOf="@+id/close_button"
            app:layout_constraintTop_toBottomOf="@+id/heightView" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>